# smart-home-fastapi

./: README.md
auth-service/: .dev.env  .gitignore  Makefile  main.py  pyproject.toml
auth-service/api_v1/: __init__.py
auth-service/api_v1/auth/: dependency.py  handler.py  hanlder.py  model.py  schema.py  service.py  utils.py
auth-service/api_v1/profile/: model.py  schema.py
auth-service/api_v1/session/: model.py  repository.py  schema.py
auth-service/api_v1/user/: __init__.py  handler.py  model.py  repository.py  schema.py  service.py
auth-service/config/: settings.py  test_models.py
auth-service/migrations/: env.py
smart-home-auth-service/: Makefile  Readme.md
