[project]
name = "smart-home-auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Doonu",email = "DonuSuzerain@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
